<resources>
    <string name="app_name">Hila-Clinic</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_name">User name</string>
    <string name="login_screen">Login Screen</string>
    <string name="one_and_a_half"> 1 כדור<sup>1</sup>/<sub>2</sub></string>
    <string name="settings">Settings</string>
    <string name="done">Done</string>
    <string name="email">Email</string>
    <string name="metrics">מדדים</string>
    <string name="questionnaires">שאלונים</string>
    <string name="Medical_file">תיק רפואי</string>
    <string name="messages">הודעות</string>
    <string name="welcome">ברוך הבא!</string>
    <string name="questionnaire">שאלון רפואי</string>
    <string name="finish">סיום</string>
    <string name="Back">הקודם</string>
    <string name="next">הבא</string>
    <string name="my_metrics">המדדים שלי</string>
    <string name="last_index">\"מדידה אחרונה:  \"</string>
    <string name="enter_result">הזן את תוצאות המדד</string>
    <string name="save">שמירה</string>
    <string name="last_measurements">מדידות אחרונות</string>
    <string name="file_name">שם המסמך:</string>
    <string name="remakrs">הערות:</string>
    <string name="take_a_picture">צלם מסמך</string>
    <string name="open_gallery">בחר מסמך מהגלריה</string>
    <string name="enter_file_name">הכנס שם למסמך</string>
    <string name="remarks">הכנס הערות</string>
    <string name="confirm">אישור</string>
    <string name="enter_message">הכנס הודעה</string>
    <string name="decline">סירוב ויציאה</string>
    <string name="terms_of_use">terms_of_use</string>
</resources>