<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_bg__dialog_shape"
    android:paddingHorizontal="5dp"
    android:paddingVertical="13dp">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_buttons"
        android:id="@+id/terms_scroll">

        <TextView
            android:id="@+id/terms_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/terms_of_use"
            android:background="@color/transparent"
            android:padding="10dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/linear_buttons"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_dialog_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:text="@string/confirm"
            android:textColor="@color/black"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="40dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_dialog_btn1"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:paddingVertical="10dp"
            android:textAllCaps="false"
            android:text="@string/decline"
            android:textColor="@color/black"
            app:backgroundTint="@color/colorPrimary"
            app:cornerRadius="40dp" />


    </LinearLayout>

</RelativeLayout>